@@ -9,4 +9,5 @@ Removed the .htaccess_example - It is now a part of INSTALL. @jers
 FroodParameters now implement Iterator @jers
 FroodParameters now implement IteratorAggregate @jers
 FroodParameters no longer implement IteratorAggregate - but now it implement ArrayAccess and Countable instead @jers
+FroodController now supports Smarty render and disables Xoops log for Json  and Smarty render @jsf
 Dispatch errors now show if The Frood was in public or admin mode @jers
